fix: handle exceptions, add logs